--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,11 @@ swagger.doc.version=V0.1
 swagger.doc.license=Apache License Version 2.0
 swagger.doc.termsOfServiceUrl=
 swagger.doc.licenseUrl=
+
 #---------------------------------------------------#  
-#           MySQL Database Connection	  	   	    #
-#---------------------------------------------------#
+#           Mysql Properties	  	   	    		#
+#---------------------------------------------------#  
 spring.datasource.url=jdbc:mysql://localhost:3306/db_college
 spring.datasource.username=root
-spring.datasource.password=mysql@123
+spring.datasource.password=
 spring.datasource.driverclassname=com.mysql.cj.jdbc.Driver
